@@ -11,6 +11,8 @@ CHANGES
 
 2015-10-06
  * snvs.py: fixed path to filter_bam.py
+ * added download_ref_db.py for easily downloading reference database
+ * changed path to reference databases; remove -D as option
 
 2015-09-17
  * renamed pangenome.py to cnvs.py
